--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
 
+<!doctype html>
+<html>
+
+<head>
+    <meta charset="utf-8">
+    <title>Finest Gaming</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="js/home-page.js"></script>
+
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/card.css">
+    <link rel="stylesheet" href="css/section.css">
+    <link rel="stylesheet" href="css/home-page.css">
+
+</head>
+
+<body style="margin: 0">
+
+<div id="toolBar">
+    <a href="/">Finest Gaming</a>
+</div>
+<div id="main">
+    <div class="section width-100">
+
+        <div id="summary" class="card width-100">
+          Coming Soon
+        </div>
+
+    </div>
+</div>
+</body>
+
+</html>
