--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="js/home-page.js"></script>
-
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/card.css">
     <link rel="stylesheet" href="css/section.css">
@@ -26,7 +23,7 @@
 <div id="main">
     <div class="section width-100">
 
-        <div id="summary" class="card width-100">
+        <div id="summary" class="card width-100" style="text-align: center">
           Coming Soon
         </div>
 
